@@ -21,7 +21,7 @@
 @c ================================================================
 
 @c ================================================================
-@c $Id: dmalloc.texi,v 1.189 2000/07/21 22:41:22 gray Exp $
+@c $Id: dmalloc.texi,v 1.190 2000/07/24 19:46:55 gray Exp $
 @c ================================================================
 
 @ifinfo
@@ -485,7 +485,10 @@ which is where you should be adding per-architecture settings.
 
 @item Type @kbd{sh ./configure} to configure the library.  You may want
 to first examine the @file{config.help} file for some information about
-configure.  Configure should generate the @file{Makefile} and some
+configure.  You may want to use the @kbd{--disable-cxx} option if you do
+not want the Makefile to build the C++ version of dmalloc.  You may also
+want to use the @kbd{--enable-threads} option to build the threaded
+version of dmalloc.  Configure should generate the @file{Makefile} and
 configuration files automatically.
 
 @emph{NOTE}: It seems that some versions of tr (especially from HP-UX)
